--- a/style.css
+++ b/style.css
@@ -39,20 +39,23 @@ body {
 
 #gridimg {
   height: 300px;
-  background-image: url(imgs/build3.gif);
-  background-size: 100% 100%;
+  background-image: url(imgs/splash1.jpg);
+  background-size:cover;
+  background-position:center;
 }
 
 #gridimg2 {
   height: 300px;
-  background-image: url(imgs/2.JPG);
-  background-size: 100% 100%;
+  background-image: url(imgs/splash2.jpg);
+  background-size:cover;
+  background-position:center;
 }
 
 #gridimg3 {
   height: 300px;
-  background-image: url(imgs/skyline.jpg);
-  background-size: 100% 100%;
+  background-image: url(imgs/splash3.jpg);
+  background-size:cover;
+  background-position:center;
 }
 
 #inherit {
